--- a/src/main/resources/static/resources/css/loginSign.css
+++ b/src/main/resources/static/resources/css/loginSign.css
@@ -110,7 +110,6 @@ button {
     font-size: 30px;
     text-align: center;
     display: block;
-    padding: 0 0 20px 0;
 }
 
 .login-btn{
